fix horizontal scroll on edge

--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,8 @@ nav {
     position: fixed;
     top: 0px; 
     left: 0px;
-    bottom: 0px;
-    right: 0px;
+    width: 100vw;
+    height: 100vh;
     z-index: -1;
 }
 
